Display unique ID to the user

--- a/templates/oauth.html
+++ b/templates/oauth.html
@@ -11,6 +11,8 @@
 	<br>
 	<div style="word-wrap: break-word; padding-left: 15px; padding-right: 15px;">
 		<p><b>JWT: </b><br>{{ JWT_value }}</p>
+		<br>
+		<p><b>Unique ID: </b><br>{{ id_value }}</p>
 	</div>
 </body>
 </html>
